<resources>
    <string name="app_name">CodigoRoto</string>
    <string name="combate_activo">COMBATE ACTIVO</string>
    <string name="huir">← HUIR</string>
    <string name="turno">Turno: TU</string>
    <string name="turno_tiempo">Turno: JUGADOR | Tiempo: 4s</string>
    <string name="jugador">JUGADOR</string>
    <string name="troyano_alpha">Troyano Alpha</string>
    <string name="hp">HP:</string>
    <string name="en">EN:</string>
    <string name="comandos_dosponibles">[COMANDOS DISPONIBLES]</string>
    <string name="ping">PING</string>
    <string name="firewall">FIREWALL</string>
    <string name="log_combate">[LOG DE COMBATE]</string>
    <string name="info_combate">Iniciando combate contra Troyano Alpha...\\Jugador usa PING: 18 de daño\\Troyano Alpha contraataca: 12 de daño</string>
    <string name="volver">← VOLVER</string>
    <string name="arbol_habilidades">[ÁRBOL DE HABILIDADES]</string>
    <string name="nivel">Nivel: 1</string>
    <string name="skills">Skills: 2</string>
    <string name="xp">XP Disponible: 0</string>
    <string name="informacion">Selecciona una habilidad</string>
    <string name="informacion_2">para ver los detalles</string>
    <string name="debug">DEBUG</string>
    <string name="ofensivo">Ofensivo</string>
    <string name="defensivo">Defensivo</string>
    <string name="soporte">Soporte</string>
    <string name="inventario_digital">[INVENTARIO DIGITAL]</string>
    <string name="items_seleccionados">Items: 7\\Seleccionados: 0</string>
    <string name="codigo_herramientas">Fragmentos de Código y Herramientas</string>
    <string name="fragmento_basico">Fragmento Básico</string>
    <string name="codigo_debug">Código Debug</string>
    <string name="kit_explosits">Kit de Exploits</string>
    <string name="parche_firewall">Parche de Firewall</string>
    <string name="celda_energia">Celda de Energía</string>
    <string name="nano_reparador">Nano Reparador</string>
    <string name="nucleo_cuantico">Núcleo Cuántico</string>
    <string name="compilador_codigo">[COMPILADOR DE CÓDIGO]</string>
    <string name="compilar">+ COMPILAR</string>
    <string name="info_compilador">Selecciona 2 o más fragmentos para crear nuevas habilidades</string>
    <string name="limpiar_seleccion">LIMPIAR SELECCIÓN</string>
    <string name="volver_al_juego">VOLVER AL JUEGO</string>
    <string name="acceso_sistema">ACCESO AL SISTEMA</string>
    <string name="codigo_roto"><![CDATA[> CODIGO ROTO SECURITY PROTOCOL<]]></string>
    <string name="autenticacion">[AUTENTICACION REQUERIDA]</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="resitrarse">REGISTRARSE</string>
    <string name="usuario">USUARIO</string>
    <string name="contraseña">CONTRASEÑA</string>
    <string name="ingresa_usuario">Ingresa tu usuario</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="clave">Contraseña</string>
    <string name="acceder"><![CDATA[> ACCEDER <]]></string>
    <string name="menu">≡ MENÚ</string>
    <string name="skillss">⚡ SKILLS</string>
    <string name="items">⊕ ITEMS</string>
    <string name="detalles_sistema">[ESCANEANDO SISTEMA... OK] - POS: (1,1) - VEL: 0</string>
    <string name="controles">[CONTROLES DE MOVIMIENTO]</string>
    <string name="title_codigo_roto">CÓDIGO ROTO</string>
    <string name="sistema_iniciado"><![CDATA[> SISTEMA INICIADO <]]></string>
    <string name="conecion_establecida">[CONECCIÓN ESTABLECIDA]</string>
    <string name="nueva_partida"><![CDATA[> NUEVA PARTIDA <]]></string>
    <string name="continuar"><![CDATA[> CONTINUAR <]]></string>
    <string name="habilidades"><![CDATA[> HABILIDADES <]]></string>
    <string name="inventarios"><![CDATA[> INVENTARIOS <]]></string>
    <string name="bienvenido">BIENVENIDO, *USUARIO*</string>
    <string name="salir">SALIR</string>
    <string name="info_flechas">[USA LAS FLECHAS PARA MOVERTE]</string>
    <string name="email">EMAIL</string>
    <string name="ingresa_email">tu@gmail.com</string>
    <string name="crear_cuenta"><![CDATA[> CREAR CUENTA <]]></string>
</resources>